# BlankNGL

./: BlankNGL.pro  BlankNGL.vcxproj  CMakeLists.txt  README.md
include/: NGLScene.h
src/: NGLScene.cpp  NGLSceneMouseControls.cpp
